updated Resource page
updated Resource page

--- a/src/app/admin/tools/tool/tool.page.html
+++ b/src/app/admin/tools/tool/tool.page.html
@@ -79,6 +79,11 @@
 		</ion-grid>
 
 	</ion-list>
+	<ion-item>
+		<ion-checkbox slot="start" [(ngModel)]="tool.nativeIntegrationAvailable"></ion-checkbox>
+		<ion-label class="ion-text-wrap">{{'ADMIN.TOOL.NativeIntegrationAvailable' | translate}}</ion-label>
+
+	</ion-item>
 
 	
 
