--- a/src/app/project/executive/resources/resource-popover/resource-popover.component.scss
+++ b/src/app/project/executive/resources/resource-popover/resource-popover.component.scss
@@ -6,8 +6,6 @@
 	color:var(--ion-color-primary-contrast);
 }
 .filter{
-	position:fixed;
-	top:0px;
 	width:100%;
 }
 .productNameInput{
@@ -35,12 +33,8 @@
 	background: var(--ion-color-light);
 	cursor: pointer;
 }
-.slides{
-	height:calc(100% - 180px);
-}
-.wrapper{
-	position:absolute;	
-	top:0px;
+.backButton{
+	cursor: pointer;
 }
 .gridsWrapper{
 	position: relative;
@@ -122,7 +116,6 @@
 	height: 100%;
 }
 .installation{
-	padding:30px;
 	height:100%;
 	overflow: auto;
 	ion-grid{
@@ -141,6 +134,7 @@
 			margin-left:auto;
 			margin-right:auto;
 			background-size: cover;
+			background-position: center;
 		}
 
 	}
@@ -161,10 +155,15 @@
 }
 .slackExample{
 	font-size: 13px;
-    color: #e01e5a;
-    background-color: #f8f8f8;
-    padding: 4px 8px;
-    border-radius: 4px;
-    border: 1px solid #ddd;
-    font-family: Monaco,Menlo,Consolas,Courier New,monospace!important;
+	color: #e01e5a;
+	background-color: #f8f8f8;
+	padding: 4px 8px;
+	border-radius: 4px;
+	border: 1px solid #ddd;
+	font-family: Monaco,Menlo,Consolas,Courier New,monospace!important;
+}
+
+
+.googleDriveIcon{
+	width:30px;
 }
