--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -24,27 +24,34 @@
         <ion-text  class=" projectName"  >{{project.summary.name}}</ion-text>
       </div>
     </ion-title>
-    <ion-title  class="headerTitle" *ngIf="accessRights.write === false && projectInit ===true">
+    <ion-title  class="headerTitle" *ngIf="accessRights.write === false && projectInit ===true"  [routerLink]="['/intl/fr']">
       <div class="menu ion-margin-end">
-        <img  src="assets/images/logo.svg" class="logoES ion-margin-end  ion-hide-sm-down" routerLink="/intl/fr" *ngIf="userIds.uid ===null || userIds ===-1" [routerLink]="['/intl/fr']">
-        <span  *ngIf="userIds.uid ===null ||  userIds ===-1" class="ion-hide-sm-down" >{{'LANDINGPAGE.Title' | translate}}
-          <ion-badge class="beta  ion-hide-sm-down">Beta</ion-badge>
+        <div class="homePageLink ion-margin-end ion-hide-sm-down">
+         <img  src="assets/images/logo.svg" class="logoES ion-margin-end" *ngIf="userIds.uid ===null || userIds ===-1">
+         <span  *ngIf="userIds.uid ===null ||  userIds ===-1" >{{'LANDINGPAGE.Title' | translate}}
+          <ion-badge class="beta">Beta</ion-badge>
         </span> 
       </div>
-      <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end"  />
-      <ion-icon   slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" ></ion-icon>
-      <ion-text  class="projectName">{{project.summary.name}}</ion-text>
-    </ion-title>
-    <ion-buttons slot="primary" *ngIf="project && projectInit === true" >
-     <ion-button  [disabled]="accessRights.write === false" (click)="presentSharingStatusPopover($event)">
-      <ion-icon class="ion-margin-end cursor"  name="lock-closed-outline" *ngIf="project.sharingStatus ==='private'" class="ion-hide-md-down"></ion-icon>
-      <ion-icon class="ion-margin-end cursor"  name="globe-outline" *ngIf="project.sharingStatus ==='public'" class="ion-hide-md-down"></ion-icon>
-      <ion-text class="ion-hide-m-down" *ngIf="project.sharingStatus ==='private'">{{'PROJECT.Private'  | translate}}  </ion-text>
-      <ion-text class="ion-hide-sm-down" *ngIf="project.sharingStatus ==='public'">{{'PROJECT.Public'  | translate}}  </ion-text>
+      <div class="projectTitle">
+        <img  [src]="project.summary.logoUrl" *ngIf="project.summary.logoUrl !==''" class=" logo ion-margin-end"  />
+        <ion-icon   slot="start" name="cube-outline" *ngIf="project.summary.logoUrl ===''" ></ion-icon>
+        <ion-text  class="projectName">{{project.summary.name}}</ion-text>
+      </div>
 
-    </ion-button>
-  </ion-buttons>
-  <app-user-avatar slot="end" *ngIf="userIds.uid !==null && userIds !==-1"></app-user-avatar>
+      
+    </div>
+
+  </ion-title>
+  <ion-buttons slot="primary" *ngIf="project && projectInit === true" >
+   <ion-button  [disabled]="accessRights.write === false" (click)="presentSharingStatusPopover($event)">
+    <ion-icon class="ion-margin-end cursor"  name="lock-closed-outline" *ngIf="project.sharingStatus ==='private'" class="ion-hide-md-down"></ion-icon>
+    <ion-icon class="ion-margin-end cursor"  name="globe-outline" *ngIf="project.sharingStatus ==='public'" class="ion-hide-md-down"></ion-icon>
+    <ion-text class="ion-hide-m-down" *ngIf="project.sharingStatus ==='private'">{{'PROJECT.Private'  | translate}}  </ion-text>
+    <ion-text class="ion-hide-sm-down" *ngIf="project.sharingStatus ==='public'">{{'PROJECT.Public'  | translate}}  </ion-text>
+
+  </ion-button>
+</ion-buttons>
+<app-user-avatar slot="end" *ngIf="userIds.uid !==null && userIds !==-1"></app-user-avatar>
 
 </ion-toolbar>
 </ion-header>     
@@ -95,11 +102,11 @@
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} "  class="ion-margin-start"><ion-text >{{'EXECUTIVE.Settings' | translate }}</ion-text></ion-label>
 </ion-item>
 <div class="separator"></div>
-<ion-item lines="none"  tooltip="{{'PROJECT.SlackMenuTooltip' | translate }}"  [options]="tooltipOptions"  target="_blank" [href]="slackUrl"  *ngIf="isSlackInstalled ===true" >
+<ion-item lines="none"  tooltip="{{'PROJECT.SlackMenuTooltip' | translate }}"  [options]="tooltipOptions"  target="_blank" [href]="slackUrl"  *ngIf="isSlackInstalled ===true && accessRights.write === true" >
   <ion-icon name="logo-slack"></ion-icon>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Slack' | translate }}</ion-text></ion-label>
 </ion-item>
-<ion-item lines="none"  tooltip="{{'PROJECT.GoogleDriveMenuTooltip' | translate }}"  [options]="tooltipOptions"  *ngIf="isGoogleDriveInstalled ===true" [ngClass]="{'selected': isSelectedTab('drive') ===true} "  (click)="navigate('drive')">
+<ion-item lines="none"  tooltip="{{'PROJECT.GoogleDriveMenuTooltip' | translate }}"  [options]="tooltipOptions"  *ngIf="isGoogleDriveInstalled ===true && accessRights.write === true" [ngClass]="{'selected': isSelectedTab('drive') ===true} "  (click)="navigate('drive')">
   <ion-img src="/assets/images/driveIcon.png" class="imgAppIcon"></ion-img>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.GoogleDrive' | translate }}</ion-text></ion-label>
 </ion-item>
