--- a/src/app/project/project.page.scss
+++ b/src/app/project/project.page.scss
@@ -187,3 +187,13 @@ ion-grid{
 .imgAppIcon{
   width: 26px;
 }
+
+.homePageLink{
+  display: inline-block;
+  padding-right:12px ;
+  border-right:   1px solid var(--ion-color-light);
+
+}
+.projectTitle{
+  display: inline-block;
+}
