--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -25,7 +25,7 @@
 				<span>{{'LANDINGPAGE.subContentTitle1Text5' | translate}}</span>
 			</h1>
 		</div>
-		<div class="figures " *ngIf="isTestSystem ===true">
+		<div class="figures ">
 			<h1>{{'LANDINGPAGE.STATISTICS.Title' | translate}}</h1>
 			<ion-grid>
 				<ion-row>
