--- a/src/app/project/executive/settings/settings.page.html
+++ b/src/app/project/executive/settings/settings.page.html
@@ -118,6 +118,19 @@
 			</ion-segment>
 		</ion-card-content>
 	</ion-card>
+	<ion-card>
+		<ion-card-header>
+			<ion-card-title>Supprimer le projet</ion-card-title>
+		</ion-card-header>
+		<ion-card-content>
+			<ion-item lines="none">
+			<ion-label slot="start">Je veux supprimer le projet.</ion-label>
+			<ion-button slot="end">Supprimer</ion-button>
+
+		</ion-item>
+		</ion-card-content>
+	</ion-card>
+
 	
 
 </ion-content>
