--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -84,41 +84,41 @@
   <ion-badge>{{resources.length}}</ion-badge>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start withBadge"><ion-text >{{'EXECUTIVE.Application' | translate }}</ion-text></ion-label>
 </ion-item>
-<ion-item lines="none" tooltip="{{'PROJECT.FinancesMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="openFeedbackPopover('finance')">
-  <ion-icon name="briefcase-outline" class="disabledIcon"></ion-icon>
-  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Finances' | translate }}</ion-text></ion-label>
-</ion-item>
+
 <ion-item lines="none"  tooltip="{{'PROJECT.OtherMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="openFeedbackPopover('other')">
   <ion-icon name="ellipsis-horizontal-circle" ></ion-icon>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Other' | translate }}</ion-text></ion-label>
 </ion-item>
-<ion-item lines="none"  tooltip="{{'PROJECT.CommentsMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="toggleCommentsPanel()"  *ngIf="accessRights.write === true" >
-  <ion-icon name="flag-outline" ></ion-icon>
+
+
+<div class="separator"></div>
+<ion-item lines="none" tooltip="{{'PROJECT.CommentsMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="toggleCommentsPanel()"  *ngIf="accessRights.write === true" >
+  <ion-icon name="chatbubbles-outline" ></ion-icon>
   <ion-badge *ngIf="project.commentsNumber !==undefined">{{project.commentsNumber}}</ion-badge>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start withBadge"><ion-text >{{'EXECUTIVE.Comments' | translate }}</ion-text></ion-label>
 </ion-item>
-<ion-item lines="none"  [ngClass]="{'selected': isSelectedTab('settings') ===true} " *ngIf="accessRights.write === true" (click)="navigate('settings')" tooltip="{{'PROJECT.SettingsMenuTooltip' | translate }}"  [options]="tooltipOptions" >
-  <ion-icon name="settings-outline"></ion-icon>
-  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} "  class="ion-margin-start"><ion-text >{{'EXECUTIVE.Settings' | translate }}</ion-text></ion-label>
-</ion-item>
-<div class="separator"></div>
 <ion-item lines="none"  tooltip="{{'PROJECT.SlackMenuTooltip' | translate }}"  [options]="tooltipOptions"  target="_blank" [href]="slackUrl"  *ngIf="isSlackInstalled ===true && accessRights.write === true" >
   <ion-icon name="logo-slack"></ion-icon>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Slack' | translate }}</ion-text></ion-label>
+</ion-item>
+<ion-item lines="none"  tooltip="{{'PROJECT.SlackMenuToInstallTooltip' | translate }}"  [options]="tooltipOptions" *ngIf="isSlackInstalled ===false && accessRights.write === true" (click)="addApplication('kghp8sg4pq6zhnelpgw')" >
+  <ion-icon name="logo-slack" class="appToInstall"></ion-icon>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.SlackToInstall' | translate }}</ion-text></ion-label>
 </ion-item>
 <ion-item lines="none"  tooltip="{{'PROJECT.GoogleDriveMenuTooltip' | translate }}"  [options]="tooltipOptions"  *ngIf="isGoogleDriveInstalled ===true && accessRights.write === true" [ngClass]="{'selected': isSelectedTab('drive') ===true} "  (click)="navigate('drive')">
   <ion-img src="/assets/images/driveIcon.png" class="imgAppIcon"></ion-img>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.GoogleDrive' | translate }}</ion-text></ion-label>
 </ion-item>
-<div class="separator"></div>
-<ion-item lines="none" (click)="requestRemoveProject()" *ngIf="project.ownerUid === userIds.uid">
-  <ion-icon name="trash-outline"></ion-icon>
-  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Delete' | translate }}</ion-text></ion-label>
+<ion-item lines="none"  tooltip="{{'PROJECT.GoogleDriveToInstallMenuTooltip' | translate }}"  [options]="tooltipOptions"  *ngIf="isGoogleDriveInstalled ===false && accessRights.write === true" (click)="addApplication('kgazdvl3cgb1hl7cxoo')">
+  <ion-img src="/assets/images/driveIcon.png" class="imgAppIcon appToInstall"></ion-img>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.GoogleDriveToInstall' | translate }}</ion-text></ion-label>
 </ion-item>
-<ion-footer>
+<div class="separator"></div>
 
- <ion-icon name="chevron-forward-outline" (click)="expandMenu()" *ngIf="expandedMenu ===false" class="expandButton"></ion-icon>
- <ion-icon name="chevron-back-outline" (click)="expandMenu()" *ngIf="expandedMenu ===true" class="expandButton"></ion-icon>
+<ion-footer>
+  <div class="separator"></div>
+  <ion-icon name="chevron-forward-outline" (click)="expandMenu()" *ngIf="expandedMenu ===false" class="expandButton"></ion-icon>
+  <ion-icon name="chevron-back-outline" (click)="expandMenu()" *ngIf="expandedMenu ===true" class="expandButton"></ion-icon>
 </ion-footer>
 </ion-col>
 <ion-col [ngClass]="{'commentsColHidden' : commentsPanelDisplayed ===false}" class="commentsCol"  *ngIf="accessRights.write === true" >
