new Conseil page

--- a/src/app/admin/conseils/conseils.page.html
+++ b/src/app/admin/conseils/conseils.page.html
@@ -6,7 +6,9 @@
 			<ion-label>
 				<h1>{{conseil.name}}</h1>
 				<h2>{{conseil.description}}</h2>
-				<ion-badge class="ion-margin-end" color="secondary">{{conseil.type}}</ion-badge><ion-badge>{{conseil.city}}</ion-badge>
+				<ion-badge class="ion-margin-end" color="secondary">{{conseil.type}}</ion-badge>
+				<ion-badge class="ion-margin-end" color="warning">{{conseil.region}}</ion-badge>
+				<ion-badge>{{conseil.city}}</ion-badge>
 			</ion-label>
 		</ion-item>
 	</ion-list>
