--- a/src/app/admin/statistics/statistics.page.html
+++ b/src/app/admin/statistics/statistics.page.html
@@ -38,4 +38,10 @@
 		</ion-label>
 		<ion-input [(ngModel)]="statistics.toolsCount"></ion-input>
 	</ion-item>
+	<ion-item >
+		<ion-label>
+			Conseils Count
+		</ion-label>
+		<ion-input [(ngModel)]="statistics.conseilsCount"></ion-input>
+	</ion-item>
 </ion-content>
