--- a/src/app/header/solution-menu/solution-menu.component.html
+++ b/src/app/header/solution-menu/solution-menu.component.html
@@ -9,6 +9,9 @@
 		<ion-item button  lines="none"  [routerLink]="['intl/fr/tools']" (click)="dismissSolutionMenuPoverer()">
 			<ion-label>{{'LANDINGPAGE.Icon2SubTitle' | translate}}</ion-label>
 		</ion-item>
+		<ion-item button  lines="none"  [routerLink]="['intl/fr/conseil']" (click)="dismissSolutionMenuPoverer()">
+			<ion-label>{{'LANDINGPAGE.Icon4SubTitle' | translate}}</ion-label>
+		</ion-item>
 		<ion-item button  lines="none"  href="https://www.facebook.com/entrepreneurstudiocom" target="_blank">
 			<ion-label>{{'LANDINGPAGE.Icon3SubTitle' | translate}}</ion-label>
 		</ion-item>
