--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 			<ion-content>
 				<ion-list >
 					<ion-item *ngFor="let p of pages; let i = index" (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
-						<ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+						<ion-icon color="primary" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-outline'"></ion-icon>
 						<ion-label> {{p.title}}</ion-label>
 					</ion-item>		
 					<ion-item href="https://www.facebook.com/groups/entrepreneurstudio" target="_blank" lines="none" detail="false">
