--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -15,7 +15,6 @@
 		</ion-grid>
 	</div>
 	<div class="subContent " ngsReveal >
-		
 		<div >
 			<h1 class="subContentTitle ion-padding ion-text-center headerTitle" >
 				<span>{{'LANDINGPAGE.subContentTitle1Text1' | translate}}</span>
@@ -56,7 +55,7 @@
 					<ion-col  >
 						<div  class="animate__animated hide-on-init  animated-delay-3" animateOnScroll  animationName="animated animate__backInUp" offset="600">
 							<div class="value">{{statistics.toolsCount}}+</div>
-							<div class="description">{{'LANDINGPAGE.STATISTICS.ToolsCount' | translate}} <a [routerLink]="['/intl/fr/tools']">{{'LANDINGPAGE.STATISTICS.ToolsCountLink' | translate}}</a></div>
+							<div class="description">{{'LANDINGPAGE.STATISTICS.ToolsCount' |  translate }}</div>
 						</div>
 					</ion-col>
 				</ion-row>
@@ -97,7 +96,21 @@
 							</div>
 						</div>
 						<div>
-							<p class="ion-text-justify">{{'LANDINGPAGE.Icon2SubText' | translate}}</p>
+							<p class="ion-text-justify">{{'LANDINGPAGE.Icon3SubText' | translate}}</p>
+						</div>
+					</ion-col>
+					<ion-col>
+						<div class="parent">
+							<div class="child sub4" >
+								<div class="child sub4"   [routerLink]="['/intl/fr/conseil']">
+									<ion-button class="actionButton" fill="outline">{{'LANDINGPAGE.Icon4SubTitle' | translate}}
+									</ion-button>
+								</div>
+
+							</div>
+						</div>
+						<div>
+							<p class="ion-text-justify">{{'LANDINGPAGE.Icon4SubText' | translate}}</p>
 						</div>
 					</ion-col>
 					<ion-col >								
