--- a/src/app/landing-page/landing-page.page.scss
+++ b/src/app/landing-page/landing-page.page.scss
@@ -319,7 +319,7 @@ span:after {
 	}
 	@media(max-width: 1600px) {
 		.actionButton{
-			font-size: 1.7em;
+			font-size: 1.4em;
 			height: 40px;
 		}
 	}
@@ -399,10 +399,11 @@ span:after {
 	.sub3{	
 		background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://image.freepik.com/free-photo/colleagues-giving-fist-bump_53876-64857.jpg);
 	}
+	.sub4{	
+		background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(https://images.unsplash.com/photo-1556761175-b413da4baf72?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=967&q=80);
+	}
 	a {
-		color:var(--ion-color-step-550, #737373);
 		text-decoration: none !important;
-
 	}
 
 
