--- a/src/app/project/menu-popover/menu-popover.component.html
+++ b/src/app/project/menu-popover/menu-popover.component.html
@@ -1,20 +1,20 @@
 	<ion-grid>
 		<ion-row>
-			<ion-col class="projectMenu">
+			<ion-col class="projectMenuCol">
 				<h1>{{project.summary.name}}</h1>
 				<ion-item (click)="navigate('settings')" lines="none">
 					<ion-icon color="primary" slot="start" name='settings-outline'></ion-icon>
 					<ion-label> 
-						<h3>Parametres</h3>
-						<p>Changer les parametres de votre projet</p>
+						<h3>{{'PROJECT.Menu.ParametersTitle' | translate}}</h3>
+						<p>{{'PROJECT.Menu.ParametersText' | translate}}</p>
 					</ion-label>
 				</ion-item>
 			</ion-col>
-
-			<ion-col class="ESMenu">
+			<ion-col class="separatorCol">
+			</ion-col>
+			<ion-col class="ESMenuCol">
 				<ion-list >
-				<h1>Entrepreneur Studio</h1>
-
+				<h1>{{'COMMON.AppTitle' | translate}}</h1> 
 					<ion-item routerDirection="root" routerLink="entrepreneur"  detail="false" (click)="dismiss()" >
 						<ion-icon color="primary" slot="start" name='layers-outline'></ion-icon>
 						<ion-label> 
@@ -22,11 +22,18 @@
 							<p>{{'PROJECT.Menu.GarageAccessText' | translate}}</p>
 						</ion-label>
 					</ion-item>	
-					<ion-item routerDirection="root" routerLink="['intl/fr/tools']"  detail="false" (click)="dismiss()">
+					<ion-item routerDirection="root" routerLink="intl/fr/tools"  detail="false" (click)="dismiss()">
 						<ion-icon color="primary" slot="start" name="construct-outline"></ion-icon>
 						<ion-label> 
 							<h3>{{'PROJECT.Menu.ToolBoxAccessTitle' | translate}}</h3>
 							<p>{{'PROJECT.Menu.ToolBoxAccessText' | translate}}</p>
+						</ion-label>
+					</ion-item>
+					<ion-item routerDirection="root" routerLink="intl/fr/conseil"  detail="false" (click)="dismiss()">
+						<ion-icon color="primary" slot="start" name="glasses-outline"></ion-icon>
+						<ion-label> 
+							<h3>{{'PROJECT.Menu.ConseilAccessTitle' | translate}}</h3>
+							<p>{{'PROJECT.Menu.ConseilAccessText' | translate}}</p>
 						</ion-label>
 					</ion-item>
 					<ion-item lines="none" detail="false">
