--- a/src/app/user-avatar/popover/popover.component.html
+++ b/src/app/user-avatar/popover/popover.component.html
@@ -1,9 +1,12 @@
 <ion-content>
 	<ion-list>
-		<ion-item button (click)="navigateToProfile()">
+		<ion-item button (click)="navigateTo('profile')">
 			<ion-label>{{'COMMON.Profile' | translate}}</ion-label>
 		</ion-item>
-		<ion-item button  lines="none"href="mailto:contact@entrepreneur-studio.com">
+		<ion-item button (click)="navigateTo('referencing')" *ngIf="user.role ==='incubator'">
+			<ion-label>{{'COMMON.Referencing' | translate}}</ion-label>
+		</ion-item>
+		<ion-item button  lines="none" href="mailto:contact@entrepreneur-studio.com">
 			<ion-label>{{'COMMON.ContactUs' | translate}}</ion-label>
 		</ion-item>
 		<ion-item button  [routerLink]="['/intl/fr/cgu']">
